<resources>
    <string name="app_name" translatable="false">AirMusician</string>
    <string name="no_camera_access" translatable="false">카메라 권한을 허용해 주세요.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">PLAY</string>
    <string name="menu_gallery">MY MUSIC</string>
    <string name="menu_slideshow">HELP</string>
    <string name="Instrument">Instrument</string>
    <string name="record">Record</string>
    <string name="metronome">Metronome</string>
    <string name="sound">Sound</string>

    <string name="title">AIR MUSICIAN</string>
    <string name="developer"><![CDATA[< DEVELOPER >]]></string>

    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Test</string>
</resources>