<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_menu"
    >

    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/wave_header"/>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="music.json"
        app:lottie_loop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <TextView
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:shadowRadius="5.0"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:shadowColor="#000000"
        style="@style/title"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/star_animation_view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="star.json"
        app:lottie_loop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_seletor"
        android:text="@string/menu_home"
        style="@style/menu_btn_text"
        />

    <Button
        android:id="@+id/mymusicBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/playBtn"
        app:layout_constraintRight_toRightOf="@id/playBtn"
        app:layout_constraintTop_toBottomOf="@id/playBtn"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_seletor"
        android:text="@string/menu_gallery"
        style="@style/menu_btn_text"
        />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/mymusicBtn"
        app:layout_constraintRight_toRightOf="@id/mymusicBtn"
        app:layout_constraintTop_toBottomOf="@id/mymusicBtn"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_seletor"
        android:text="@string/menu_slideshow"
        style="@style/menu_btn_text"
        />

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="45dp"
        android:background="@drawable/setting_btn_customise"
        />


    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/wave_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleY="-1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>