<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_backgrond">

    <ImageView
        android:id="@+id/up_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/transColorMainBtn"

        />

    <ImageButton
        android:id="@+id/home_img_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/home_btn_customise"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        />
    <TextView
        android:id="@+id/settingTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        style="@style/title"/>

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/waveLoadingView"
        android:layout_width="330dp"
        android:layout_height="310dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/up_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:wlv_borderColor="@android:color/holo_blue_dark"
        app:wlv_borderWidth="3dp"
        app:wlv_round_rectangle="true"
        app:wlv_shapeType="circle"
        app:wlv_titleBottomColor="@color/pink1"

        app:wlv_titleBottomSize="24sp"
        app:wlv_titleBottomStrokeColor="@color/colorWhite"
        app:wlv_titleBottomStrokeWidth="3dp"
        app:wlv_titleCenterColor="@color/pink2"

        app:wlv_titleCenterSize="24sp"
        app:wlv_titleCenterStrokeColor="@color/colorWhite"
        app:wlv_titleCenterStrokeWidth="3dp"
        app:wlv_titleTopColor="@color/pink3"

        app:wlv_titleTopSize="24sp"
        app:wlv_titleTopStrokeColor="@color/colorWhite"
        app:wlv_titleTopStrokeWidth="3dp"
        app:wlv_triangle_direction="north"

        app:wlv_waveAmplitude="70"
        app:wlv_waveColor="@android:color/holo_blue_dark" />

    <com.example.mediapipemultihandstrackingapp.model.OutlineTextView
        android:id="@+id/instrumentsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/settingTitle"
        app:layout_constraintTop_toBottomOf="@id/settingTitle"
        android:layout_marginStart="240dp"
        android:layout_marginTop="45dp"
        style="@style/whitetext"
        android:text="@string/Instrument"
        app:textStroke="true"
        app:textStrokeWidth="7.0"
        app:textStrokeColor="@color/colorbluegrey"
        />

    <Spinner
        android:id="@+id/instruments"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/instrumentsName"
        app:layout_constraintLeft_toLeftOf="@id/metronome"
        app:layout_constraintTop_toTopOf="@id/instrumentsName"
        app:layout_constraintBottom_toTopOf="@id/settingRadioGroup"
        android:layout_marginBottom="30dp"
        />

    <com.example.mediapipemultihandstrackingapp.model.OutlineTextView
        android:id="@+id/recordName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/instrumentsName"
        app:layout_constraintTop_toBottomOf="@id/instrumentsName"
        android:layout_marginTop="20dp"
        android:text="@string/record"
        style="@style/whitetext"
        app:textStroke="true"
        app:textStrokeWidth="7.0"
        app:textStrokeColor="@color/colorbluegrey"
        />

    <RadioGroup
        android:id="@+id/settingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/recordName"
        app:layout_constraintTop_toTopOf="@id/recordName"
        android:layout_marginStart="50dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/videoBtn">

    <RadioButton
        android:id="@+id/soundBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/recordName"
        app:layout_constraintTop_toTopOf="@id/recordName"
        android:text="sound"
        android:textSize="15sp"
        />

    <RadioButton
        android:id="@+id/videoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/soundBtn"
        app:layout_constraintTop_toTopOf="@id/soundBtn"
        android:layout_marginStart="15dp"
        android:text="video"
        android:textSize="15sp"
        />

    </RadioGroup>

    <com.example.mediapipemultihandstrackingapp.model.OutlineTextView
        android:id="@+id/metronomeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/recordName"
        app:layout_constraintTop_toBottomOf="@id/recordName"
        android:layout_marginTop="20dp"
        android:text="@string/metronome"
        style="@style/whitetext"
        app:textStroke="true"
        app:textStrokeWidth="7.0"
        app:textStrokeColor="@color/colorbluegrey"
        />

    <Spinner
        android:id="@+id/metronome"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toRightOf="@id/metronomeName"
        app:layout_constraintTop_toTopOf="@id/metronomeName"
        app:layout_constraintBottom_toTopOf="@id/sound"
        android:layout_marginBottom="10dp"
        />


    <com.example.mediapipemultihandstrackingapp.model.OutlineTextView
        android:id="@+id/soundName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/metronomeName"
        app:layout_constraintTop_toBottomOf="@id/metronomeName"
        android:layout_marginTop="20dp"
        style="@style/whitetext"
        app:textStroke="true"
        app:textStrokeWidth="7.0"
        app:textStrokeColor="@color/colorbluegrey"
        android:text="@string/sound"
        />

    <SeekBar
        android:id="@+id/sound"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/soundName"
        app:layout_constraintTop_toTopOf="@id/soundName"
        android:layout_marginStart="60dp"
        android:max="100"
        />

<!--    <TextView-->
<!--        android:id="@+id/soundPresentage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintLeft_toRightOf="@id/sound"-->
<!--        app:layout_constraintTop_toTopOf="@id/sound"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/sound"-->
<!--        android:textSize="20dp"-->
<!--        android:textColor="@color/colorgrey"-->
<!--        android:text="0"-->
<!--        />-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintLeft_toRightOf="@id/soundPresentage"-->
<!--        app:layout_constraintTop_toTopOf="@id/soundPresentage"-->
<!--        android:text="%"-->
<!--        android:textSize="20dp"-->
<!--        android:textColor="@color/colorgrey"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        />-->

</androidx.constraintlayout.widget.ConstraintLayout>